results/acr-val-sbfl/applicable_patch/django__django-14580_2024-04-05_05-12-05/run_test_suite_1.log
Output:
Testing against Django installed in '/media/media0/yuntong/SWE-bench/testbed/django__django/setup_django__django__4.0/django' with up to 256 processes
Importing application migrations
Found 50 test(s).
Skipping setup of unused database(s): default, other.
System check identified no issues (0 silenced).
test_args_kwargs_signature (migrations.test_writer.OperationWriterTests) ... ok
test_args_signature (migrations.test_writer.OperationWriterTests) ... ok
test_empty_signature (migrations.test_writer.OperationWriterTests) ... ok
test_expand_args_signature (migrations.test_writer.OperationWriterTests) ... ok
test_kwargs_signature (migrations.test_writer.OperationWriterTests) ... ok
test_multiline_args_signature (migrations.test_writer.OperationWriterTests) ... ok
test_nested_args_signature (migrations.test_writer.OperationWriterTests) ... ok
test_nested_operation_expand_args_signature (migrations.test_writer.OperationWriterTests) ... ok
test_custom_operation (migrations.test_writer.WriterTests) ... ok
test_deconstruct_class_arguments (migrations.test_writer.WriterTests) ... ok
test_migration_file_header_comments (migrations.test_writer.WriterTests)
Test comments at top of file. ... ok
test_migration_path (migrations.test_writer.WriterTests) ... ok
test_models_import_omitted (migrations.test_writer.WriterTests)
django.db.models shouldn't be imported if unused. ... ok
test_register_non_serializer (migrations.test_writer.WriterTests) ... ok
test_register_serializer (migrations.test_writer.WriterTests) ... ok
test_serialize_builtin_types (migrations.test_writer.WriterTests) ... ok
test_serialize_builtins (migrations.test_writer.WriterTests) ... ok
test_serialize_choices (migrations.test_writer.WriterTests) ... ok
test_serialize_class_based_validators (migrations.test_writer.WriterTests)
Ticket #22943: Test serialization of class-based validators, including ... ok
test_serialize_collections (migrations.test_writer.WriterTests) ... ok
test_serialize_compiled_regex (migrations.test_writer.WriterTests)
Make sure compiled regex can be serialized. ... ok
test_serialize_constants (migrations.test_writer.WriterTests) ... ok
test_serialize_datetime (migrations.test_writer.WriterTests) ... ok
test_serialize_empty_nonempty_tuple (migrations.test_writer.WriterTests)
Ticket #22679: makemigrations generates invalid code for (an empty ... ok
test_serialize_enums (migrations.test_writer.WriterTests) ... ok
test_serialize_fields (migrations.test_writer.WriterTests) ... ok
test_serialize_frozensets (migrations.test_writer.WriterTests) ... ok
test_serialize_functions (migrations.test_writer.WriterTests) ... ok
test_serialize_functools_partial (migrations.test_writer.WriterTests) ... ok
test_serialize_functools_partialmethod (migrations.test_writer.WriterTests) ... ok
test_serialize_iterators (migrations.test_writer.WriterTests) ... ok
test_serialize_lazy_objects (migrations.test_writer.WriterTests) ... ok
test_serialize_local_function_reference (migrations.test_writer.WriterTests)
A reference in a local scope can't be serialized. ... ok
test_serialize_managers (migrations.test_writer.WriterTests) ... ok
test_serialize_multiline_strings (migrations.test_writer.WriterTests) ... ok
test_serialize_nested_class (migrations.test_writer.WriterTests) ... ok
test_serialize_numbers (migrations.test_writer.WriterTests) ... ok
test_serialize_path_like (migrations.test_writer.WriterTests) ... ok
test_serialize_pathlib (migrations.test_writer.WriterTests) ... ok
test_serialize_range (migrations.test_writer.WriterTests) ... ok
test_serialize_set (migrations.test_writer.WriterTests) ... ok
test_serialize_settings (migrations.test_writer.WriterTests) ... ok
test_serialize_strings (migrations.test_writer.WriterTests) ... ok
test_serialize_timedelta (migrations.test_writer.WriterTests) ... ok
test_serialize_type_model (migrations.test_writer.WriterTests) ... FAIL
test_serialize_type_none (migrations.test_writer.WriterTests) ... ok
test_serialize_unbound_method_reference (migrations.test_writer.WriterTests)
An unbound method used within a class body can be serialized. ... ok
test_serialize_uuid (migrations.test_writer.WriterTests) ... ok
test_simple_migration (migrations.test_writer.WriterTests)
Tests serializing a simple migration. ... ok
test_sorted_imports (migrations.test_writer.WriterTests)
#24155 - Tests ordering of imports. ... ok

======================================================================
FAIL: test_serialize_type_model (migrations.test_writer.WriterTests)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/media/media0/yuntong/SWE-bench/testbed/django__django/setup_django__django__4.0/tests/migrations/test_writer.py", line 205, in safe_exec
    exec(string, globals(), d)
  File "<string>", line 1
    import from django.db import models
           ^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/yuntong/miniconda3/envs/setup_django__django__4.0/lib/python3.8/unittest/case.py", line 60, in testPartExecutor
    yield
  File "/home/yuntong/miniconda3/envs/setup_django__django__4.0/lib/python3.8/unittest/case.py", line 676, in run
    self._callTestMethod(testMethod)
  File "/home/yuntong/miniconda3/envs/setup_django__django__4.0/lib/python3.8/unittest/case.py", line 633, in _callTestMethod
    method()
  File "/media/media0/yuntong/SWE-bench/testbed/django__django/setup_django__django__4.0/tests/migrations/test_writer.py", line 662, in test_serialize_type_model
    self.assertSerializedEqual(models.Model)
  File "/media/media0/yuntong/SWE-bench/testbed/django__django/setup_django__django__4.0/tests/migrations/test_writer.py", line 218, in assertSerializedEqual
    self.assertEqual(self.serialize_round_trip(value), value)
  File "/media/media0/yuntong/SWE-bench/testbed/django__django/setup_django__django__4.0/tests/migrations/test_writer.py", line 215, in serialize_round_trip
    return self.safe_exec("%s\ntest_value_result = %s" % ("\n".join(imports), string), value)['test_value_result']
  File "/media/media0/yuntong/SWE-bench/testbed/django__django/setup_django__django__4.0/tests/migrations/test_writer.py", line 208, in safe_exec
    self.fail("Could not exec %r (from value %r): %s" % (string.strip(), value, e))
  File "/home/yuntong/miniconda3/envs/setup_django__django__4.0/lib/python3.8/unittest/case.py", line 753, in fail
    raise self.failureException(msg)
AssertionError: Could not exec 'import from django.db import models\ntest_value_result = models.Model' (from value <class 'django.db.models.base.Model'>): invalid syntax (<string>, line 1)

----------------------------------------------------------------------
Ran 50 tests in 0.046s

FAILED (failures=1)

>>>>> All Tests Passed
